Revision history for App-Doh

          - Rationalised the templates
          - Fixed footer and add JS handler for content margin-bottom
          - Added minimum password length
          - Admin page functional improvements
          - Improved CSS for forms
          - Upated metadata
          - Added user profile management
          - Added ::Session to MANIFEST
          - Added ::Session. Added session timeout
          - Adjusted CSS tips box model
          - Adjusted CSS prompt widths
          - Removed unsed dependency
          - Fixed tests
          - Admin interface update user roles
          - Admin interface creates / deletes / activate / deactives users
          - Adding bcrypt based authentication
          - Renamed some model methods. Updated prereqs
          - Editing posts works!
          - Added ::Auth::Htpasswd to bypass auth for static page generation
          - Renamed attribute handler class to ::Attributes
          - Moved attribute handlers to own class
          - Deleted ::Auth::Htpasswd
          - Addd Authorization role using subroutine attributes
          - Dropped namespace::sweep in favour of namespace::autoclean
          - New markdown files created from a template
          - Added metadata author and date attributes to posts
          - Added build status badge to markdown
          - Fixed undefined variable warning in Request
          - Fixed undefined ENV variable warning in Server
          - Added prev and next links to posts
          - Index page now even more fluid
          - Added .travis.yml
          - Static site posts index works!
          - Refactored L10n domain names
          - Using strictures internally
          - Added strictures::defanged
          - Dropped appclass and config_class attrs from ::Server
          - Posts list indents / outdents correctly
          - Added JS navbar scroller
          - Debugging static posts
          - Added Deutche PO file
          - Updated metadata