@@ -13,7 +13,7 @@ File::DataClass   = v0.43.0
 HTML::Accessors   = v0.11.0
 HTTP::Body        = 1.11
 HTTP::Message     = 6.06
-Module::Pluggable = 4.8
+Module::Pluggable = 5.1
 Moo               = 1.004
 Plack             = 1.0018
 Plack::Middleware::Deflater  = 0.08
