@@ -2,15 +2,17 @@ package App::Doh;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev: 64 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.2.%d', q$Rev: 65 $ =~ /\d+/gmx );
 
 use Moo;
-use Class::Usul::Constants  qw( TRUE );
-use Class::Usul::Types      qw( BaseType );
+use Class::Usul::Constants  qw( NUL TRUE );
+use Class::Usul::Types      qw( BaseType SimpleStr );
 
-has 'usul'  => is => 'ro', isa => BaseType,
-   handles  => [ qw( config l10n lock log ) ],
-   init_arg => 'builder', required => TRUE;
+has 'moniker' => is => 'ro', isa => SimpleStr, default => NUL;
+
+has 'usul'    => is => 'ro', isa => BaseType,
+   handles    => [ qw( config l10n lock log ) ],
+   init_arg   => 'builder', required => TRUE;
 
 1;
 
@@ -37,7 +39,7 @@ App::Doh - An easy way to document a project using Markdown
 
 =head1 Version
 
-This documents version v0.2.$Rev: 64 $ of L<App::Doh>
+This documents version v0.2.$Rev: 65 $ of L<App::Doh>
 
 =head1 Description
 
