@@ -17,6 +17,8 @@ with    q(App::Doh::Role::Preferences);
 with    q(App::Doh::Role::Templates);
 with    q(App::Doh::Role::Editor);
 
+has '+moniker' => default => 'docs';
+
 # Construction
 around 'get_page' => sub {
    my ($orig, $self, $req, $node, $locale) = @_;
