@@ -14,6 +14,8 @@ with    q(App::Doh::Role::PageConfiguration);
 with    q(App::Doh::Role::Preferences);
 
 # Public attributes
+has '+moniker'    => default => 'help';
+
 has 'excluding'   => is => 'ro', isa => ArrayRef, builder => sub {
    [ qw( Attributes Auth Functions Markdown Model Role View ) ] };
 
